Little skill update

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,9 @@ admin/images/Portfolio/*.png
 admin/images/Portfolio/mini/*.png
 admin/images/Slider/*.png
 admin/images/Slider/mini/*.png
+admin/images/ClientAvatar/*.jpeg
+admin/images/ClientAvatar/mini/*.jpeg
+admin/images/Portfolio/*.jpeg
+admin/images/Portfolio/mini/*.jpeg
+admin/images/Slider/*.jpeg
+admin/images/Slider/mini/*.jpeg
